--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Questrial&display=swap" rel="stylesheet">
-    <title>Searchable From JSON</title>
+    <title>Movie App</title>
 </head>
 <body>
-    <input type='search' placeholder='search'></input>
+    <header>
+        <span>My Movie App</span>
+        <input type='search' placeholder='search'></input>
+    </header>
+    
 <div id="test">
     <div class="card-template" card-template>
         <!-- <template data-template> -->
@@ -29,6 +33,7 @@
         <button class="prev" nextBtn>Next</button>
     </div>
 </div>
-<script src="/main.js"></script>
+<script type="text/javascript" src="./config.js"></script>
+<script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
